--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,8 @@
             },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development",
-                "ASPNETCORE_URLS": "http://localhost:5010"
+                "ASPNETCORE_URLS": "http://localhost:5010",
+                "KAFKA_TOPIC": "SocialMediaPostEvents"
             },
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
@@ -41,7 +42,8 @@
             },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development",
-                "ASPNETCORE_URLS": "http://localhost:5011"
+                "ASPNETCORE_URLS": "http://localhost:5011",
+                "KAFKA_TOPIC": "SocialMediaPostEvents"
             },
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
