--- a/SM-Post/Post.Query/Post.Query.Api/Post.Query.Api.csproj
+++ b/SM-Post/Post.Query/Post.Query.Api/Post.Query.Api.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.36" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
