--- a/SM-Post/Post.Query/Post.Query.Api/appsettings.Development.json
+++ b/SM-Post/Post.Query/Post.Query.Api/appsettings.Development.json
@@ -6,12 +6,13 @@
     }
   },
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost,1433;Database=SocialMedia;User Id=sa;Password=strongSaPassword"
+    "SqlServer": "Server=localhost,1433;Database=SocialMedia;User Id=usuario;Password=contrasena"
   },
   "ConsumerConfig": {
     "GroupId": "SM_Consumer",
     "BootstrapServers": "localhost:9092",
     "EnableAutoCommit": false,
-    "AutoOffsetReset": "Earliest"
+    "AutoOffsetReset": "Earliest",
+    "AllowAutoCreateTopics": true
   }
 }
